--- a/app/src/main/res/layout/content_profile_basicinfo.xml
+++ b/app/src/main/res/layout/content_profile_basicinfo.xml
@@ -19,6 +19,7 @@
         android:src="@drawable/profile_basic_profimage" />
 
     <ImageView
+        android:id="@+id/profile_edit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignEnd="@+id/basic_profile_img"
@@ -96,6 +97,25 @@
                     android:textCursorDrawable="@drawable/bg_input_cursor"
                     android:paddingBottom="2dp" />
             </android.support.design.widget.TextInputLayout>
+            <android.support.design.widget.TextInputLayout
+
+                android:textColorHint="@color/colorBlack"
+                android:theme="@style/TextLabel"
+                android:layout_marginTop="20dp"
+                android:layout_width="match_parent"
+                android:layout_height="50dp">
+                <EditText
+                    android:id="@+id/et_emailid"
+                    android:textSize="16sp"
+                    android:hint="Email Id"
+                    android:textColor="#000"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:inputType="textEmailAddress"
+                    android:background="@drawable/selector_bg_edit"
+                    android:textCursorDrawable="@drawable/bg_input_cursor"
+                    android:paddingBottom="2dp" />
+            </android.support.design.widget.TextInputLayout>
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -126,7 +146,7 @@
                     android:theme="@style/TextLabel"
                     android:layout_width="match_parent"
                     android:layout_height="50dp">
-                    
+
                     <EditText
                         android:id="@+id/et_mobile"
                         android:textSize="16sp"
@@ -147,11 +167,14 @@
                 android:theme="@style/TextLabel"
                 android:layout_marginTop="20dp"
                 android:layout_width="match_parent"
-                android:layout_height="50dp">
+                android:layout_height="150dp">
             <EditText
                 android:id="@+id/et_address"
                 android:textSize="16sp"
                 android:hint="Address"
+                android:maxLines="3"
+                android:gravity="start"
+                android:padding="10dp"
                 android:textColor="#000"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -160,44 +183,8 @@
                 android:textCursorDrawable="@drawable/bg_input_cursor"
                 android:paddingBottom="2dp" />
             </android.support.design.widget.TextInputLayout>
-            <android.support.design.widget.TextInputLayout
 
-                android:textColorHint="@color/colorBlack"
-                android:theme="@style/TextLabel"
-                android:layout_marginTop="20dp"
-                android:layout_width="match_parent"
-                android:layout_height="50dp">
-                <EditText
-                    android:id="@+id/et_city"
-                    android:textSize="16sp"
-                    android:hint="City"
-                    android:textColor="#000"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:inputType="textEmailAddress"
-                    android:background="@drawable/selector_bg_edit"
-                    android:textCursorDrawable="@drawable/bg_input_cursor"
-                    android:paddingBottom="2dp" />
-            </android.support.design.widget.TextInputLayout>
-            <android.support.design.widget.TextInputLayout
 
-                android:textColorHint="@color/colorBlack"
-                android:theme="@style/TextLabel"
-                android:layout_marginTop="20dp"
-                android:layout_width="match_parent"
-                android:layout_height="50dp">
-                <EditText
-                    android:id="@+id/et_zipcode"
-                    android:textSize="16sp"
-                    android:hint="Zip Code"
-                    android:textColor="#000"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:inputType="textEmailAddress"
-                    android:background="@drawable/selector_bg_edit"
-                    android:textCursorDrawable="@drawable/bg_input_cursor"
-                    android:paddingBottom="2dp" />
-            </android.support.design.widget.TextInputLayout>
             <android.support.design.widget.TextInputLayout
 
             android:textColorHint="@color/colorBlack"
