--- a/app/src/main/res/layout/content_profile_completeinfo.xml
+++ b/app/src/main/res/layout/content_profile_completeinfo.xml
@@ -2,213 +2,20 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
-    android:layout_height="match_parent"
 
-    xmlns:card_view="http://schemas.android.com/apk/res-auto">
+    android:layout_height="match_parent">
     <ScrollView
         android:layout_marginBottom="10dp"
 
         android:layout_width="match_parent"
         android:layout_below="@+id/basic_profile_img"
         android:layout_height="match_parent">
-        <HorizontalScrollView
-            android:id="@+id/hsv"
-            android:layout_width="fill_parent"
-            android:layout_height="match_parent"
-            android:layout_marginBottom="50dp"
-            android:fillViewport="true"
-            android:layout_centerHorizontal="true"
-            android:measureAllChildren="false"
-            android:scrollbars="none" >
-            <LinearLayout
-                android:id="@+id/innerLay"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:orientation="horizontal" >
-                <android.support.v7.widget.CardView
-                    android:id="@+id/cardview"
-                    android:layout_width="300dp"
-                    android:layout_height="350dp"
-                    card_view:contentPadding="4dp"
-                    card_view:cardCornerRadius="8dp"
-                    card_view:cardElevation="12dp"
-                    android:layout_gravity="center"
-                    android:layout_margin="5dp"
-                    android:background="#000"
-                    android:layout_marginBottom="20dp"
 
-                    >
-                <LinearLayout
-                    android:id="@+id/asthma_action_plan"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-
-                    android:orientation="vertical" >
-
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:gravity="center"
-                        android:layout_gravity="center"
-                        android:text="Monthly"
-                        android:textSize="20dp"
-                        android:layout_marginTop="10dp"
-                        android:textColor="#000" />
-
-
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:gravity="center"
-                        android:layout_gravity="center"
-                        android:text="\u20B9 100"
-                        android:textStyle="bold"
-                        android:textSize="30dp"
-                        android:layout_marginTop="5dp"
-                        android:textColor="@color/colorAccent" />
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:gravity="center"
-                        android:layout_gravity="center"
-                        android:text="The term originally referred to messages sent using the Short Message Service (SMS). It has grown beyond alphanumeric text to include multimedia messages (known as MMS) containing digital images, videos, and sound content, as well as ideograms known as emoji (happy faces, sad faces, and other icons)."
-                        android:textSize="16dp"
-                        android:padding="10dp"
-                        android:layout_marginTop="5dp"
-                        android:textColor="#000" />
-                    <Button
-                        android:id="@+id/monthly_first"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:layout_marginTop="5dp"
-                        android:text="Choose Plan"
-                        android:padding="10dp"
-                        android:textColor="@color/colorAccent"
-                        android:background="@drawable/but_border"/>
-                </LinearLayout>
-                </android.support.v7.widget.CardView>
-                <android.support.v7.widget.CardView
-                    android:layout_width="300dp"
-                    android:layout_height="350dp"
-                    card_view:contentPadding="4dp"
-                    card_view:cardCornerRadius="8dp"
-                    card_view:cardElevation="12dp"
-                    android:layout_gravity="center"
-                    android:layout_margin="5dp"
-                    android:background="#000"
-
-                    >
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-
-                        android:orientation="vertical" >
-
-                        <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:gravity="center"
-                            android:layout_gravity="center"
-                            android:text="Monthly"
-                            android:textSize="20dp"
-                            android:layout_marginTop="10dp"
-                            android:textColor="#000" />
-
-
-                        <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:gravity="center"
-                            android:layout_gravity="center"
-                            android:text="\u20B9 200"
-                            android:textStyle="bold"
-                            android:textSize="30dp"
-                            android:layout_marginTop="10dp"
-                            android:textColor="@color/colorAccent" />
-                        <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:gravity="center"
-                            android:layout_gravity="center"
-                            android:text="The term originally referred to messages sent using the Short Message Service (SMS). It has grown beyond alphanumeric text to include multimedia messages (known as MMS) containing digital images, videos, and sound content, as well as ideograms known as emoji (happy faces, sad faces, and other icons)."
-                            android:textSize="16dp"
-                            android:padding="10dp"
-                            android:textColor="#000" />
-                        <Button
-                            android:id="@+id/monthly_second"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center"
-                            android:layout_marginTop="5dp"
-                            android:text="Choose Plan"
-                            android:padding="10dp"
-                            android:textColor="@color/colorAccent"
-                            android:background="@drawable/but_border"/>
-                    </LinearLayout>
-                </android.support.v7.widget.CardView>
-                <android.support.v7.widget.CardView
-                    android:layout_width="300dp"
-                    android:layout_height="350dp"
-                    card_view:contentPadding="4dp"
-                    card_view:cardCornerRadius="8dp"
-                    card_view:cardElevation="12dp"
-                    android:layout_gravity="center"
-                    android:layout_margin="5dp"
-                    android:background="#000"
-
-                    >
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-
-                        android:orientation="vertical" >
-
-                        <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:gravity="center"
-                            android:layout_gravity="center"
-                            android:text="Monthly"
-                            android:textSize="20dp"
-                            android:layout_marginTop="10dp"
-                            android:textColor="#000" />
-
-
-                        <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:gravity="center"
-                            android:layout_gravity="center"
-                            android:text="\u20B9 500"
-                            android:textStyle="bold"
-                            android:textSize="30dp"
-                            android:layout_marginTop="10dp"
-                            android:textColor="@color/colorAccent" />
-                        <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:gravity="center"
-                            android:padding="10dp"
-                            android:layout_gravity="center"
-                            android:text="The term originally referred to messages sent using the Short Message Service (SMS). It has grown beyond alphanumeric text to include multimedia messages (known as MMS) containing digital images, videos, and sound content, as well as ideograms known as emoji (happy faces, sad faces, and other icons)."
-                            android:textSize="16dp"
-
-                            android:textColor="#000" />
-                        <Button
-                            android:id="@+id/monthly_third"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center"
-                            android:layout_marginTop="5dp"
-                            android:text="Choose Plan"
-                            android:padding="10dp"
-                            android:textColor="@color/colorAccent"
-                            android:background="@drawable/but_border"/>
-                    </LinearLayout>
-                </android.support.v7.widget.CardView>
-            </LinearLayout>
-        </HorizontalScrollView>
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/recyclerview1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
+            />
     </ScrollView>
     </RelativeLayout>
