--- a/app/src/main/res/layout/content_vendor_completeinfo.xml
+++ b/app/src/main/res/layout/content_vendor_completeinfo.xml
@@ -26,18 +26,57 @@
                 android:background="@drawable/spiner_border"
                 app:hintText="Choose Your Plan"/>
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:weightSum="2"
+                android:layout_marginTop="20dp"
+                android:orientation="horizontal">
+                <com.toptoche.searchablespinnerlibrary.SearchableSpinner
+                    android:id="@+id/SP_vcomplete_offertype"
+                    android:layout_width="match_parent"
+                    android:layout_weight=".6"
+                    android:layout_height="50dp"
+                    android:layout_marginRight="10dp"
+                    android:background="@drawable/spiner_border"
+                    app:hintText="Offer Type"/>
+                <android.support.design.widget.TextInputLayout
+                    android:textColorHint="@color/colorBlack"
+                    android:theme="@style/TextLabel"
+                    android:visibility="invisible"
+android:id="@+id/TIV_vcomplete_percentage"
+                    android:layout_marginLeft="5dp"
+                    android:layout_weight="1.4"
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp">
+                    <EditText
+                        android:textSize="16sp"
+                        android:hint="Percentage"
+                        android:textColor="#000"
+                        android:id="@+id/et_vcomplete_percentage"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:inputType="textEmailAddress"
+                        android:background="@drawable/selector_bg_edit"
+                        android:textCursorDrawable="@drawable/bg_input_cursor"
+                        android:paddingBottom="2dp" />
+                </android.support.design.widget.TextInputLayout>
+            </LinearLayout>
 
             <android.support.design.widget.TextInputLayout
                 android:textColorHint="@color/colorBlack"
                 android:theme="@style/TextLabel"
+
+                android:layout_marginLeft="5dp"
+                android:layout_weight="1.4"
                 android:layout_marginTop="20dp"
                 android:layout_width="match_parent"
                 android:layout_height="50dp">
                 <EditText
                     android:textSize="16sp"
-                    android:hint="Member No"
+                    android:hint="Title"
+                    android:id="@+id/et_vcomplete_disctitle"
                     android:textColor="#000"
-                    android:id="@+id/et_prof_membernum"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:inputType="textEmailAddress"
@@ -46,30 +85,43 @@
                     android:paddingBottom="2dp" />
             </android.support.design.widget.TextInputLayout>
 
-            <TextView
-            android:textSize="16sp"
-            android:text="Valid"
-            android:textColor="#000"
-            android:layout_marginTop="35dp"
+            <android.support.design.widget.TextInputLayout
+                android:textColorHint="@color/colorBlack"
+                android:theme="@style/TextLabel"
 
-            android:id="@+id/et_prof_valid"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@drawable/selector_bg_edit"
-            android:paddingBottom="5dp" />
-
+                android:layout_marginLeft="5dp"
+                android:layout_weight="1.4"
+                android:layout_marginTop="20dp"
+                android:layout_width="match_parent"
+                android:layout_height="50dp">
+                <EditText
+                    android:textSize="16sp"
+                    android:hint="Description"
+                    android:textColor="#000"
+                    android:id="@+id/et_vcomplete_discdesc"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:inputType="textEmailAddress"
+                    android:background="@drawable/selector_bg_edit"
+                    android:textCursorDrawable="@drawable/bg_input_cursor"
+                    android:paddingBottom="2dp" />
+            </android.support.design.widget.TextInputLayout>
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Upload File"
-                android:layout_marginTop="20dp"
+
+                android:layout_gravity="center"
+                android:layout_marginTop="30dp"
                 android:textColor="@android:color/black"
                 android:textSize="16sp" />
             <ImageView
-                android:id="@+id/IV_prof_uploadfile"
+                android:id="@+id/IV_vcomplefileupload"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="15dp"
+
+                android:layout_gravity="center"
                 android:src= "@drawable/professional_image_upload"/>
             <LinearLayout
                 android:layout_width="match_parent"
@@ -79,20 +131,25 @@
                 android:layout_marginRight="40dp"
                 android:layout_marginTop="20dp"
                 android:orientation="horizontal">
-                <Button
+                <TextView
+                    android:id="@+id/TV_vcomplete_skipnow"
                     android:layout_width="wrap_content"
                     android:layout_height="40dp"
                     android:layout_weight="1"
-                    android:text="Back"
+                    android:text="Skip"
                     android:layout_margin="10dp"
-                    android:textColor="@color/colorWhite"
-                    android:background="@drawable/but_unselected" />
+                    android:textSize="20sp"
+                    android:gravity="center"
+                    android:textColor="@color/colorAccent"
+                   />
                 <Button
-                    android:id="@+id/professional_but_next"
+                    android:id="@+id/B_vcomplete_complete"
                     android:layout_width="wrap_content"
                     android:layout_height="40dp"
                     android:layout_weight="1"
-                    android:text="Next"
+                    android:text="Complete"
+                    android:textAllCaps="false"
+                    android:textSize="18sp"
                     android:background="@drawable/but_selected"
                     android:layout_margin="10dp"
                     android:textColor="@color/colorWhite" />
