--- a/app/src/main/res/layout/activity_home_screen_vendor.xml
+++ b/app/src/main/res/layout/activity_home_screen_vendor.xml
@@ -4,18 +4,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.weqar.weqar.HomeScreen">
-
-
-    <include layout="@layout/content_home_screen" />
+    tools:context="com.weqar.weqar.HomeScreen_vendor">
+    <include layout="@layout/content_home_screen_vendor" />
 
     <com.roughike.bottombar.BottomBar
-        android:id="@+id/bottomBar"
+        android:id="@+id/bottomBar_vendor"
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:layout_alignParentBottom="true"
         app:bb_titleTextAppearance="@style/TextAppearance.BotFont"
-        app:bb_tabXmlResource="@xml/bottombar_tabs"
+        app:bb_tabXmlResource="@xml/bottombar_tabs_vendor"
         />
 
 </RelativeLayout>
