--- a/app/src/main/res/layout/fragment_bot_nav__discounts.xml
+++ b/app/src/main/res/layout/fragment_bot_nav__discounts.xml
@@ -128,7 +128,19 @@
 
  </LinearLayout>
 </HorizontalScrollView>
-    <include layout="@layout/fragment_discount_card" />
+    <GridView
+        android:layout_below="@+id/home_hoizontal_scroll"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/disc_card_gridview"
+        android:layout_alignParentBottom="true"
+        android:verticalSpacing="3dp"
+        android:scrollbars="none"
+        android:horizontalSpacing="2dp"
+        android:numColumns="1"
+        android:padding="3dp"
+        android:layout_margin="6dp"
+        />
 
 
 </RelativeLayout>
