--- a/app/src/main/res/layout/content_user_subscription_horizontalpage.xml
+++ b/app/src/main/res/layout/content_user_subscription_horizontalpage.xml
@@ -30,6 +30,12 @@ android:padding="4dp"
                 android:orientation="vertical">
 
                 <TextView
+                    android:id="@+id/grade_planid"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:visibility="invisible"
+                    />
+                <TextView
                     android:id="@+id/grade_plantype"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
