--- a/app/src/main/res/drawable/splash.xml
+++ b/app/src/main/res/drawable/splash.xml
@@ -6,7 +6,7 @@
     <item>
         <bitmap
 
-           android:src="@drawable/weqar_logo"/>
+           android:src="@drawable/splashk"/>
     </item>
 
 
