--- a/app/src/main/res/layout/content_multi_spinner__vendor__category.xml
+++ b/app/src/main/res/layout/content_multi_spinner__vendor__category.xml
@@ -14,14 +14,14 @@
         android:background="@color/colorPrimaryDark"
         android:layout_height="60dp">
 
-        <ImageButton
+        <ImageView
             android:id="@+id/back_ima_scedule"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
             android:layout_alignParentStart="true"
             android:layout_centerVertical="true"
             android:layout_marginStart="8dp"
-            android:backgroundTint="#fff"
+         android:src="@drawable/ic_keyboard_arrow_left_black_24dp"
             android:focusable="true" />
 
         <EditText
