--- a/app/src/main/res/layout/content_vendor_completeinfo.xml
+++ b/app/src/main/res/layout/content_vendor_completeinfo.xml
@@ -53,10 +53,11 @@ android:id="@+id/TIV_vcomplete_percentage"
                         android:textSize="16sp"
                         android:hint="Percentage"
                         android:textColor="#000"
+
                         android:id="@+id/et_vcomplete_percentage"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:inputType="textEmailAddress"
+                        android:inputType="number"
                         android:background="@drawable/selector_bg_edit"
                         android:textCursorDrawable="@drawable/bg_input_cursor"
                         android:paddingBottom="2dp" />
