--- a/app/src/main/res/layout/activity_discount_details.xml
+++ b/app/src/main/res/layout/activity_discount_details.xml
@@ -4,8 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/kfc"
-    tools:context="com.weqar.weqar.DiscountDetails">
+    android:background="#ce020202"
+    tools:context="com.weqar.weqar.DiscountDetails_User">
 
     <FrameLayout
         android:layout_width="match_parent"
@@ -15,10 +15,11 @@
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
+        android:id="@+id/koo"
         android:layout_height="wrap_content"
         app:theme="@style/ToolbarStyle"
-
-        android:background="#08000000">
+        android:background="#08000000"
+>
 
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
@@ -41,8 +42,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Discount"
-android:layout_marginLeft="70dp"
-                    android:layout_centerInParent="true"
+                android:layout_marginLeft="70dp"
+                android:layout_centerInParent="true"
                 android:textColor="@color/colorWhite"
                 android:textSize="22sp"
                 android:gravity="center"/>
@@ -51,7 +52,14 @@ android:layout_marginLeft="70dp"
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_discount_details" />
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/discountdet_rv_user"
+        android:layout_width="match_parent"
+        android:layout_below="@+id/koo"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp"
+        />
+    <!--<include layout="@layout/content_discount_details" />-->
 
 
 </RelativeLayout>
