--- a/app/src/main/res/layout/content_discount_details.xml
+++ b/app/src/main/res/layout/content_discount_details.xml
@@ -7,7 +7,7 @@
 
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.weqar.weqar.DiscountDetails"
+    tools:context="com.weqar.weqar.DiscountDetails_User"
     tools:showIn="@layout/activity_discount_details">
     <HorizontalScrollView
         android:id="@+id/hsv"
