--- a/app/src/main/res/layout/fragment_bot_nav__discounts.xml
+++ b/app/src/main/res/layout/fragment_bot_nav__discounts.xml
@@ -56,91 +56,22 @@
         </RelativeLayout>
     </android.support.v7.widget.Toolbar>
     </android.support.design.widget.AppBarLayout>
-    <HorizontalScrollView
-    android:id="@+id/home_hoizontal_scroll"
-    android:layout_width="match_parent"
-    android:scrollbars="none"
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/home_hoizontal_scroll"
+
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_below="@+id/appbar_homescreen"
-    android:layout_height="wrap_content">
- <LinearLayout
-     android:layout_width="match_parent"
-     android:layout_height="match_parent"
-     android:layout_margin="5dp"
-     android:orientation="horizontal">
-     <Button
-         android:layout_width="wrap_content"
-         android:layout_height="40dp"
-         android:text="Indian"
-         android:layout_margin="5dp"
-         android:textColor="@color/colorWhite"
-         android:background="@drawable/but_selected"/>
-     <Button
-         android:layout_width="wrap_content"
-         android:layout_height="40dp"
-         android:text="Chinese"
-         android:layout_margin="5dp"
-         android:textColor="@color/colorWhite"
-         android:background="@drawable/but_selected"/>
-     <Button
-         android:layout_width="wrap_content"
-         android:layout_height="40dp"
-         android:text="Malaysian"
-         android:layout_margin="5dp"
-         android:textColor="@color/colorWhite"
-         android:background="@drawable/but_selected"/>
-     <Button
-         android:layout_width="wrap_content"
-         android:layout_height="40dp"
-         android:text="Arabic"
-         android:layout_margin="5dp"
-         android:textColor="@color/colorWhite"
-         android:background="@drawable/but_selected"/>
-     <Button
-         android:layout_width="wrap_content"
-         android:layout_height="40dp"
-         android:text="Veg"
-         android:layout_margin="5dp"
-         android:textColor="@color/colorWhite"
-         android:background="@drawable/but_selected"/>
-     <Button
-         android:layout_width="wrap_content"
-         android:layout_height="40dp"
-         android:text="Non Veg"
-         android:layout_margin="5dp"
-         android:textColor="@color/colorWhite"
-         android:background="@drawable/but_selected"/>
-     <Button
-         android:layout_width="wrap_content"
-         android:layout_height="40dp"
-         android:text="Salad"
-         android:layout_margin="5dp"
-         android:textColor="@color/colorWhite"
-         android:background="@drawable/but_selected"/>
-     <Button
-         android:layout_width="wrap_content"
-         android:layout_height="40dp"
-         android:text="Fast Foods"
-         android:layout_margin="5dp"
-         android:textColor="@color/colorWhite"
-         android:background="@drawable/but_selected"/>
+        android:layout_marginBottom="10dp"
+        />
 
-
-
- </LinearLayout>
-</HorizontalScrollView>
-    <GridView
-        android:layout_below="@+id/home_hoizontal_scroll"
+    <ListView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/disc_card_gridview"
-        android:layout_alignParentBottom="true"
-        android:verticalSpacing="3dp"
-        android:scrollbars="none"
-        android:horizontalSpacing="2dp"
-        android:numColumns="1"
+        android:id="@+id/disc_vendor_gv"
+        android:divider="@android:color/transparent"
+android:layout_below="@+id/home_hoizontal_scroll"
         android:padding="3dp"
         android:layout_margin="6dp"
         />
-
-
 </RelativeLayout>
