--- a/app/src/main/res/layout/fragment_bot_nav__jobs.xml
+++ b/app/src/main/res/layout/fragment_bot_nav__jobs.xml
@@ -23,6 +23,7 @@
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
 
+
                 <ImageView
                     android:id="@+id/homescreen_filter"
                     android:layout_width="wrap_content"
@@ -30,19 +31,31 @@
                     android:layout_centerVertical="true"
                     android:background="@drawable/home_filter"
                     android:backgroundTint="@color/colorHintss" />
+
                 <EditText
                     android:id="@+id/homescreen_search"
-                    android:layout_width="248dp"
+                    android:layout_width="238dp"
                     android:layout_height="wrap_content"
+                    android:layout_alignTop="@+id/homescreen_addjobs"
+                    android:layout_marginStart="23dp"
+                    android:layout_toEndOf="@+id/homescreen_filter"
+                    android:background="@drawable/editext_lightborder_unsel"
+                    android:backgroundTint="@color/colorHintss"
+                    android:drawableLeft="@drawable/ic_search_black_24dp"
                     android:gravity="start"
-                    android:layout_centerHorizontal="true"
                     android:hint="Search"
                     android:padding="4dp"
-                    android:textColorHint="@color/colorHints"
-                    android:drawableLeft="@drawable/ic_search_black_24dp"
-                    android:background="@drawable/editext_lightborder_unsel"
-                    android:backgroundTint="@color/colorHintss"/>
+                    android:textColorHint="@color/colorHints" />
+                <ImageView
+                    android:id="@+id/homescreen_addjobs"
+                    android:layout_width="wrap_content"
+                    android:layout_height="25dp"
+                    android:layout_alignParentEnd="true"
+                    android:layout_marginRight="40dp"
+                    android:layout_centerVertical="true"
 
+                    android:background="@drawable/ic_add_black_24dp"
+                    />
                 <ImageView
                     android:id="@+id/homescreen_notification"
                     android:layout_width="wrap_content"
@@ -57,12 +70,14 @@
         </android.support.v7.widget.Toolbar>
     </android.support.design.widget.AppBarLayout>
 
-    <com.baoyz.swipemenulistview.SwipeMenuListView
-        android:id="@+id/weqar_jobs"
+
+    <ListView
         android:layout_width="match_parent"
-        android:scrollbars="none"
-        android:divider="@null"
-        android:layout_margin="10dp"
+        android:layout_height="match_parent"
+        android:id="@+id/jobs_vendor_gv"
+        android:divider="@android:color/transparent"
         android:layout_below="@+id/appbar_homescreen"
-        android:layout_height="match_parent"/>
+        android:padding="3dp"
+        android:layout_margin="6dp"
+        />
 </RelativeLayout>
