--- a/app/src/main/res/layout/fragment_bot_nav__settings_fragment.xml
+++ b/app/src/main/res/layout/fragment_bot_nav__settings_fragment.xml
@@ -285,7 +285,7 @@
                     android:paddingLeft="2dp"
                     android:src="@drawable/ic_keyboard_arrow_left_black_24dp"/>
                 <TextView
-                    android:id="@+id/TV_set_v_logout"
+                    android:id="@+id/TV_set_u_logout"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text=" Logout"
@@ -294,7 +294,7 @@
                     android:textSize="17sp"
                     android:layout_gravity="center"/>
                 <ImageView
-                    android:id="@+id/IV_set_v_logout"
+                    android:id="@+id/IV_set_u_logout"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:padding="10dp"
