--- a/app/src/main/res/layout/fragment_discount_card.xml
+++ b/app/src/main/res/layout/fragment_discount_card.xml
@@ -1,144 +1,162 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:layout_below="@+id/home_hoizontal_scroll"
+    android:descendantFocusability="blocksDescendants"
+
     xmlns:app="http://schemas.android.com/apk/res-auto">
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
 
 
-    <RelativeLayout
-        android:id="@+id/relative_discountone"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
-    <com.makeramen.roundedimageview.RoundedImageView
-        android:id="@+id/roundimg_one"
-        android:layout_width="match_parent"
-        android:layout_height="170dp"
-        android:layout_marginLeft="13dp"
-        android:layout_marginRight="15dp"
-        android:src="@drawable/rounded_two"
-        app:riv_border_color="@color/colorHints"
-        app:riv_border_width="2dip"
-        app:riv_corner_radius="13dp"/>
-    <ImageView
-        android:id="@+id/IV_disc_image"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/roundimg_one"
-        android:layout_alignParentStart="true"
-        android:layout_alignTop="@+id/roundimg_one"
-        android:padding="8dp"
-        android:layout_marginLeft="1dp"
-        android:src="@drawable/vgv" />
-        <com.makeramen.roundedimageview.RoundedImageView
-            android:id="@+id/RIV_disc_logo"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
-            android:layout_alignStart="@+id/TV_disc_percentage"
-            android:layout_alignTop="@+id/roundimg_one"
-            android:layout_centerInParent="true"
-            android:layout_marginTop="20dp"
-            android:src="@drawable/rounded"
-            app:riv_border_color="@color/colorPrimary"
-            app:riv_border_width="2dip"
-            app:riv_oval="true" />
-    <TextView
-        android:id="@+id/TV_disc_percentage"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="20dp"
-        android:layout_below="@+id/RIV_disc_logo"
-        android:text="75% Discount in KFC"
-        android:focusableInTouchMode="false"
-        android:clickable="false"
-        android:focusable="false"
-        android:textColor="@color/colorWhite"
-        android:textSize="14sp"
-        android:layout_marginTop="17dp"
-        android:textStyle="bold" />
 
-    <TextView
-        android:id="@+id/textViewu"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="2dp"
-        android:focusableInTouchMode="false"
-        android:clickable="false"
-        android:focusable="false"
-        android:layout_below="@+id/TV_disc_percentage"
-        android:text="Percide January 7 2018 Dont miss it"
-        android:textColor="@color/colorWhite"
-        android:textSize="11sp"
-       />
+            <RelativeLayout
+                android:id="@+id/relative_discountone"
+                android:layout_width="wrap_content"
+                android:layout_height="170dp">
 
-        <RatingBar
-            android:id="@+id/mappage_rating"
-            style="?android:attr/ratingBarStyleIndicator"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/textViewu"
-            android:layout_marginLeft="20dp"
-            android:layout_marginTop="3dp"
-            android:clickable="false"
-            android:focusable="false"
-            android:focusableInTouchMode="false"
+                <com.makeramen.roundedimageview.RoundedImageView
+                    android:id="@+id/roundimg_one"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginLeft="13dp"
+                    android:layout_marginRight="13dp"
 
-            android:max="5"
-            android:progressBackgroundTint="#0b760b"
+                    android:paddingBottom="6dp"
+                    android:paddingTop="6dp"
+                    android:src="@drawable/rounded_two"
+                    app:riv_border_color="@color/colorHints"
+                    app:riv_border_width="2dip"
+                    app:riv_corner_radius="13dp"
+                    android:clickable="false"
+                    android:focusable="false"
+                    android:focusableInTouchMode="false"
+                   />
 
-            android:progressTint="@color/coloryellow"
-            android:rating="5"
-            android:scaleX=".5"
-            android:scaleY=".5"
-            android:transformPivotX="0dp"
-            android:transformPivotY="0dp" />
-<LinearLayout
-    android:layout_width="wrap_content"
-    android:layout_height="match_parent"
-    android:gravity="end"
-    android:layout_marginTop="30dp"
-    android:layout_marginRight="30dp"
-    android:layout_alignParentEnd="true"
-    android:orientation="vertical">
+                <ImageView
+                    android:id="@+id/IV_vdisc_image"
+                    android:layout_width="250dp"
+                    android:layout_height="150dp"
+                    android:layout_centerVertical="true"
+                    android:src="@drawable/vgv"
+                    android:clickable="false"
+                    android:focusable="false"
+                    android:focusableInTouchMode="false"
+                    />
 
-        <Button
-            android:id="@+id/button"
-            android:layout_width="60dp"
-            android:layout_height="25dp"
-            android:layout_above="@+id/TV_disc_percentage"
-            android:layout_marginBottom="29dp"
-            android:layout_marginStart="29dp"
-            android:layout_toEndOf="@+id/IV_disc_image"
-            android:background="@drawable/but_selected"
+                <com.makeramen.roundedimageview.RoundedImageView
+                    android:id="@+id/roundedImageView"
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
 
-            android:clickable="false"
-            android:focusable="false"
-            android:focusableInTouchMode="false"
-            android:text="Unfollow"
-            android:textAllCaps="false"
-            android:textColor="@color/colorWhite"
-            android:textSize="12sp" />
+                    android:layout_alignStart="@+id/TV_disc_percentage"
+                    android:layout_alignTop="@+id/IV_vdisc_image"
+                    android:layout_marginStart="11dp"
+                    android:layout_marginTop="11dp"
+                    android:src="@drawable/rounded"
+                    app:riv_border_color="@color/colorPrimary"
+                    app:riv_border_width="2dip"
+                    app:riv_oval="true"
+                    android:clickable="false"
+                    android:focusable="false"
+                    android:focusableInTouchMode="false"
+                   />
 
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignEnd="@+id/button"
-            android:layout_below="@+id/TV_disc_percentage"
-            android:clickable="false"
-            android:focusable="false"
-            android:layout_marginTop="25dp"
-            android:focusableInTouchMode="false"
-            android:src="@drawable/ic_location_on_black_24dp" />
+                <TextView
+                    android:id="@+id/TV_disc_percentage"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/roundedImageView"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginTop="17dp"
 
-</LinearLayout>
+                    android:text="75% Discount in KFC"
+                    android:textColor="@color/colorWhite"
+                    android:textSize="14sp"
+                    android:textStyle="bold"
+                    android:clickable="false"
+                    android:focusable="false"
+                    android:focusableInTouchMode="false"
+                    />
+
+                <TextView
+                    android:id="@+id/textViewu"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/TV_disc_percentage"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginTop="2dp"
+
+                    android:text="Percide January 7 2018 Dont miss it"
+                    android:textColor="@color/colorWhite"
+                    android:textSize="11sp"
+                    android:clickable="false"
+                    android:focusable="false"
+                    android:focusableInTouchMode="false"/>
+
+                <RatingBar
+                    android:id="@+id/RB_vendr_rating"
+                    style="?android:attr/ratingBarStyleIndicator"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/textViewu"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginTop="3dp"
+
+                    android:max="5"
+                    android:progressBackgroundTint="@color/coloryellow"
+                    android:progressTint="@color/coloryellow"
+                    android:rating="5"
+                    android:scaleX=".5"
+                    android:scaleY=".5"
+                    android:transformPivotX="0dp"
+                    android:transformPivotY="0dp"
+                    android:clickable="false"
+                    android:focusable="false"
+                    android:focusableInTouchMode="false"/>
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:gravity="end"
+                    android:clickable="false"
+                    android:focusable="false"
+                    android:focusableInTouchMode="false"
+
+                    android:layout_marginTop="30dp"
+                    android:layout_marginRight="30dp"
+                    android:layout_alignParentEnd="true"
+                    android:orientation="vertical">
+
+                    <Button
+                        android:id="@+id/button"
+                        android:layout_width="60dp"
+                        android:layout_height="25dp"
+                        android:layout_above="@+id/TV_disc_percentage"
+                        android:layout_marginBottom="29dp"
+                        android:layout_marginStart="29dp"
+                        android:layout_toEndOf="@+id/IV_disc_image"
+                        android:background="@drawable/but_selected"
+
+                        android:text="Unfollow"
+                        android:textAllCaps="false"
+                        android:textColor="@color/colorWhite"
+                        android:textSize="12sp"
+                        android:clickable="false"
+                        android:focusable="false"
+                        android:focusableInTouchMode="false"/>
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignEnd="@+id/button"
+                        android:layout_below="@+id/TV_disc_percentage"
+
+                        android:layout_marginTop="25dp"
+                        android:clickable="false"
+                        android:focusable="false"
+                        android:focusableInTouchMode="false"
+                        android:src="@drawable/ic_location_on_black_24dp" />
+
+                </LinearLayout>
+
+            </RelativeLayout>
+
 </RelativeLayout>
-
-
-
-    </ScrollView>
-</LinearLayout>
