--- a/app/src/main/res/layout/item_list_app.xml
+++ b/app/src/main/res/layout/item_list_app.xml
@@ -34,25 +34,22 @@
             android:orientation="vertical">
 
             <LinearLayout
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
                 android:weightSum="3">
 
-                <com.makeramen.roundedimageview.RoundedImageView
-                    android:id="@+id/roundedImageView"
+                <de.hdodenhof.circleimageview.CircleImageView
+                    android:id="@+id/IV_logo_jobuser"
                     android:layout_width="70dp"
                     android:layout_height="120dp"
                     android:layout_gravity="center"
                     android:layout_marginTop="12dp"
                     android:layout_weight=".0"
-                    android:src="@drawable/rounded"
-                    app:riv_border_color="@color/colorPrimary"
-                    app:riv_border_width="2dip"
-                    app:riv_oval="true" />
+                    android:src="@drawable/rounded"/>
 
                 <LinearLayout
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="6dp"
                     android:layout_marginRight="0dp"
@@ -60,6 +57,7 @@
                     android:orientation="vertical">
 
                     <TextView
+                        android:id="@+id/fag_jobs_type_user"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="start"
@@ -70,6 +68,7 @@
                         android:textSize="20sp" />
 
                     <TextView
+                        android:id="@+id/fag_jobs_field_user"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="start"
@@ -79,28 +78,33 @@
                         android:textColor="@color/colorHint"
                         android:textSize="16sp" />
 
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="start"
-                        android:layout_marginLeft="10dp"
-                        android:gravity="start"
-                        android:text="Text messaging, or texting, is the act of composing and sending electronic messages, typically consisting "
-                        android:textColor="@color/colorHintss"
-                        android:textSize="13sp" />
-                </LinearLayout>
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:weightSum="2"
+                        android:orientation="horizontal">
+                        <TextView
+                            android:id="@+id/fag_jobs_desc_user"
+                            android:layout_width="200dp"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="start"
+                            android:layout_marginLeft="10dp"
+                            android:layout_weight="1"
+                            android:drawableEnd="@drawable/ic_navigate_next_black_24dp"
+                            android:gravity="start"
+                            android:text="Text messaging, or texting, is the act of composing and sending electronic messages, typically consisting "
+                            android:textColor="@color/colorHintss"
+                            android:textSize="13sp" />
 
-                <ImageView
-                    android:layout_width="111dp"
-                    android:layout_height="40dp"
-                    android:layout_gravity="end|center"
-                    android:layout_weight="1"
-                    android:src="@drawable/ic_navigate_next_black_24dp" />
+                    </LinearLayout>
+
+                </LinearLayout>
 
             </LinearLayout>
 
 
             <TextView
+                android:id="@+id/fag_jobs_deadline_user"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="   Deadline 27-03-2017"
@@ -110,6 +114,8 @@
                 android:drawableLeft="@drawable/ic_access_alarm_black_24dp"
                 android:gravity="end"/>
         </LinearLayout>
+
+
 
     </android.support.v7.widget.CardView>
 
