--- a/app/src/main/res/layout/content_profile_basicinfo.xml
+++ b/app/src/main/res/layout/content_profile_basicinfo.xml
@@ -10,8 +10,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/basic_profile_img"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
         android:layout_gravity="center"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="25dp"
@@ -20,8 +20,8 @@
 
     <ImageView
         android:id="@+id/profile_edit"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
         android:layout_alignEnd="@+id/basic_profile_img"
         android:layout_alignTop="@+id/basic_profile_img"
         android:src="@drawable/profile_basic_profileedit" />
@@ -155,7 +155,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:inputType="number"
-                        android:maxLength="10"
+                        android:maxLength="8"
                         android:background="@drawable/selector_bg_edit"
                         android:textCursorDrawable="@drawable/bg_input_cursor"
                         android:paddingBottom="2dp" />
