--- a/app/src/main/res/layout/content_add_discount__vendor.xml
+++ b/app/src/main/res/layout/content_add_discount__vendor.xml
@@ -72,7 +72,7 @@
                         android:id="@+id/et_vcomplete_percentage_s"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:inputType="textEmailAddress"
+                        android:inputType="number"
                         android:background="@drawable/selector_bg_edit"
                         android:textCursorDrawable="@drawable/bg_input_cursor"
                         android:paddingBottom="2dp" />
@@ -128,8 +128,8 @@
                 android:textSize="16sp" />
             <ImageView
                 android:id="@+id/IV_vcomplefileupload_s"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="150dp"
+                android:layout_height="150dp"
                 android:layout_margin="15dp"
                 android:layout_gravity="center"
                 android:src= "@drawable/professional_image_upload"/>
