--- a/app/src/main/res/layout/content_discountdesc_user.xml
+++ b/app/src/main/res/layout/content_discountdesc_user.xml
@@ -25,9 +25,13 @@
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="260dp"
-                
-                android:background="@drawable/kfc"
+
                 android:layout_weight="3">
+                <ImageView
+                    android:id="@+id/disc_det_image"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/kfc"/>
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -35,8 +39,8 @@
                     android:layout_alignParentBottom="true"
                     android:layout_alignParentStart="true"
                     android:id="@+id/linearLayout">
-                    <com.makeramen.roundedimageview.RoundedImageView
-                        android:id="@+id/roundedImageView1"
+                    <de.hdodenhof.circleimageview.CircleImageView
+                        android:id="@+id/disc_det_logo"
                         android:layout_width="60dp"
                         android:layout_height="60dp"
                         android:layout_margin="8dp"
