--- a/app/src/main/res/layout/content_profile_professionalinfo.xml
+++ b/app/src/main/res/layout/content_profile_professionalinfo.xml
@@ -30,7 +30,7 @@
                 android:id="@+id/et_prof_cidno"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:inputType="textEmailAddress"
+                android:inputType="number"
                 android:background="@drawable/selector_bg_edit"
                 android:textCursorDrawable="@drawable/bg_input_cursor"
                 android:paddingBottom="2dp" />
@@ -76,8 +76,8 @@
              android:textSize="16sp" />
         <ImageView
             android:id="@+id/IV_prof_uploadfile"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
             android:layout_margin="15dp"
             android:src= "@drawable/professional_image_upload"/>
         <LinearLayout
