--- a/app/src/main/res/layout/content_vendor_completeinfo.xml
+++ b/app/src/main/res/layout/content_vendor_completeinfo.xml
@@ -118,8 +118,8 @@ android:id="@+id/TIV_vcomplete_percentage"
                 android:textSize="16sp" />
             <ImageView
                 android:id="@+id/IV_vcomplefileupload"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="150dp"
+                android:layout_height="150dp"
                 android:layout_margin="15dp"
 
                 android:layout_gravity="center"
