--- a/app/src/main/res/layout/fragment_discount_card.xml
+++ b/app/src/main/res/layout/fragment_discount_card.xml
@@ -13,19 +13,18 @@
                 android:layout_width="wrap_content"
                 android:layout_height="170dp">
 
-                <com.makeramen.roundedimageview.RoundedImageView
+                <ImageView
                     android:id="@+id/roundimg_one"
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:layout_marginLeft="13dp"
-                    android:layout_marginRight="13dp"
+
+
+
 
                     android:paddingBottom="6dp"
                     android:paddingTop="6dp"
                     android:src="@drawable/rounded_two"
-                    app:riv_border_color="@color/colorHints"
-                    app:riv_border_width="2dip"
-                    app:riv_corner_radius="13dp"
+
                     android:clickable="false"
                     android:focusable="false"
                     android:focusableInTouchMode="false"
@@ -34,7 +33,7 @@
                 <ImageView
                     android:id="@+id/IV_vdisc_image"
                     android:layout_width="250dp"
-                    android:layout_height="150dp"
+                    android:layout_height="158dp"
                     android:layout_centerVertical="true"
                     android:src="@drawable/vgv"
                     android:clickable="false"
@@ -42,19 +41,19 @@
                     android:focusableInTouchMode="false"
                     />
 
-                <com.makeramen.roundedimageview.RoundedImageView
+                <de.hdodenhof.circleimageview.CircleImageView
                     android:id="@+id/roundedImageView"
                     android:layout_width="60dp"
                     android:layout_height="60dp"
+                    app:civ_border_width="1dp"
+                    app:civ_border_color="@color/colorPrimary"
 
                     android:layout_alignStart="@+id/TV_disc_percentage"
                     android:layout_alignTop="@+id/IV_vdisc_image"
                     android:layout_marginStart="11dp"
                     android:layout_marginTop="11dp"
                     android:src="@drawable/rounded"
-                    app:riv_border_color="@color/colorPrimary"
-                    app:riv_border_width="2dip"
-                    app:riv_oval="true"
+
                     android:clickable="false"
                     android:focusable="false"
                     android:focusableInTouchMode="false"
