--- a/app/src/main/res/layout/fragment_bot_nav__jobs_fragment__vendor.xml
+++ b/app/src/main/res/layout/fragment_bot_nav__jobs_fragment__vendor.xml
@@ -30,19 +30,32 @@
                     android:layout_centerVertical="true"
                     android:background="@drawable/home_filter"
                     android:backgroundTint="@color/colorHintss" />
+
                 <EditText
-                    android:id="@+id/homescreen_search"
-                    android:layout_width="248dp"
+                    android:id="@+id/homescreen_jobs_search"
+                    android:layout_width="240dp"
                     android:layout_height="wrap_content"
+                    android:layout_alignParentTop="true"
+                    android:layout_marginStart="17dp"
+                    android:layout_toEndOf="@+id/homescreen_filter"
+                    android:background="@drawable/editext_lightborder_unsel"
+                    android:drawableLeft="@drawable/ic_search_black_24dp"
                     android:gravity="start"
-                    android:layout_centerHorizontal="true"
                     android:hint="Search"
                     android:padding="4dp"
-                    android:textColorHint="@color/colorHints"
-                    android:drawableLeft="@drawable/ic_search_black_24dp"
-                    android:background="@drawable/editext_lightborder_unsel"
-                    android:backgroundTint="@color/colorHintss"/>
+                    android:backgroundTint="@color/colorHintss"
+                    android:textColor="@color/colorBlack"
+                    android:textColorHint="@color/colorHints" />
+                <ImageView
+                    android:id="@+id/homescreen_addjobs"
+                    android:layout_width="wrap_content"
+                    android:layout_height="25dp"
+                    android:layout_alignParentEnd="true"
+                    android:layout_marginRight="40dp"
+                    android:layout_centerVertical="true"
 
+                    android:background="@drawable/ic_add_black_24dp"
+                    />
                 <ImageView
                     android:id="@+id/homescreen_notification"
                     android:layout_width="wrap_content"
@@ -58,11 +71,14 @@
     </android.support.design.widget.AppBarLayout>
 
     <com.baoyz.swipemenulistview.SwipeMenuListView
-        android:id="@+id/weqar_jobs"
+        android:id="@+id/weqar_vendor_addjobs"
         android:layout_width="match_parent"
         android:scrollbars="none"
         android:divider="@null"
-        android:layout_margin="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginBottom="60dp"
         android:layout_below="@+id/appbar_homescreen"
         android:layout_height="match_parent"/>
 </RelativeLayout>
