--- a/app/src/main/res/layout/fragment_discount_card.xml
+++ b/app/src/main/res/layout/fragment_discount_card.xml
@@ -15,7 +15,7 @@
 
                 <ImageView
                     android:id="@+id/roundimg_one"
-                    android:layout_width="wrap_content"
+                    android:layout_width="400dp"
                     android:layout_height="match_parent"
 
 
